v1.15.14
--------------------------------------------------------------------------------
 * Removing support for abandoned draft of http-wg regarding cache-digests.

v1.15.13
--------------------------------------------------------------------------------
 * Fixes #200: "LimitRequestFields 0" now disables the limit, as documented.

v1.15.12
--------------------------------------------------------------------------------
 * Fixes #201: do not count repeated headers with same name against the field
   count limit. The are merged internally, as if sent in a single HTTP/1 line.
 * Refrain from detecting (intermediate) responses, when the connection has
   already been aborted or non-flush meta buckets are encountered.
 * Changed terminology to master/secondary connections in the source.
 * Test against the installed version of the module. This allows test cases
   to work with other versions.

v1.15.11
--------------------------------------------------------------------------------
 * mod_proxy_http2: the "ping" proxy parameter 
   (see <https://httpd.apache.org/docs/2.4/mod/mod_proxy.html>) is now used
   when checking the liveliness of a new or reused h2 connection to the backend.
   With short durations, this makes load-balancing more responsive. The module
   will hold back requests until ping conditions are met, using features of the
   HTTP/2 protocol alone. [Ruediger Pluem, Stefan Eissing]

v1.15.10
--------------------------------------------------------------------------------
 * mod_proxy_http2: respect ProxyTimeout settings on backend connections
   while waiting on incoming data. [Ruediger Pluem, Stefan Eissing]

v1.15.9
--------------------------------------------------------------------------------
 * Since v1.15.4 mod_reqtimeout was enabled for h2 connections. This lead to closing of
   h2 connections when a handshake timeout was configured, irregardless if the handshake